--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@mui/x-data-grid": "^5.17.8",
+    "@mui/x-data-grid-generator": "^5.17.8",
     "next": "13.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
