--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.0",
     "next": "13.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.11.7",
     "@types/prop-types": "^15.7.5",
     "@types/react": "18.0.23",
