--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.7.0",
     "next": "13.0.0",
+    "next-iron-session": "^4.2.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/lodash": "^4.14.186",
     "@types/node": "18.11.7",
     "@types/prop-types": "^15.7.5",
     "@types/react": "18.0.23",
