--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.11.0",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
