basically build project complete!

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 APPLICATION_SECRET=h@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@tima
 SESSION_COOKIE_NAME=sessionId
 DB_CONNECTION_STRING="mongodb://localhost/mujiba
+NODE_ENV=production
