--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next-middlewares/sessionOptions.js", "next-middlewares/sessionOptions.js", "next-middlewares/next-session-middleware.js", "next-middlewares/sessionProps.js"],
   "exclude": ["node_modules"]
 }
