--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.0.1",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
