--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.7.0",
     "next": "13.0.0",
     "next-iron-session": "^4.2.0",
+    "preact": "^10.11.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
