--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "formidable": "^2.0.1",
+    "fs": "^0.0.1-security",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/formidable": "^2.0.5",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.11.7",
     "@types/prop-types": "^15.7.5",
