--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-medium-image-zoom": "^5.1.2",
     "react-player": "^2.11.0",
     "react-toastify": "^9.0.8"
   },
