--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "clean": "rimraf node_modules/.cache .next",
@@ -28,13 +28,17 @@
     "mongoose": "^6.7.0",
     "next": "13.0.0",
     "next-iron-session": "^4.2.0",
+    "nodemon": "^2.0.20",
     "preact": "^10.11.3",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "qrcode": "^1.5.1",
+    "qrcode.react": "^3.1.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-medium-image-zoom": "^5.1.2",
     "react-player": "^2.11.0",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "twilio": "^4.7.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
