--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,8 @@
 APPLICATION_SECRET=h@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@tima
 SESSION_COOKIE_NAME=sessionId
-DB_CONNECTION_STRING="mongodb://localhost/mujiba
+DB_CONNECTION_STRING=mongodb://localhost/mujiba
+SERVER_URL=https://localhost:3000
+UPLOAD_URL=https://localhost:3000/uploads
+ACCOUNT_SID
+ACCOUNT_AUTH_TOKEN
 NODE_ENV=development
