--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,9 @@
 APPLICATION_SECRET=h@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@tima
 SESSION_COOKIE_NAME=sessionId
-DB_CONNECTION_STRING=mongodb://localhost/mujiba
+DB_CONNECTION_STRING=mongodb://127.0.0.1:27017/mujiba
 SERVER_URL=https://localhost:3000
 UPLOAD_URL=https://localhost:3000/uploads
-ACCOUNT_SID
-ACCOUNT_AUTH_TOKEN
-NODE_ENV=development
+TWILIO_ACCOUNT_SID=ACfbc7caff58064f7265716b4b43df042c
+TWILIO_AUTH_TOKEN=5a981793a837d3f3fe5e1371f746865e
+TWILIO_NUMBER=+12765660430
+NODE_ENV
