--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-geolocated": "^4.0.3",
     "react-medium-image-zoom": "^5.1.2",
     "react-player": "^2.11.0",
     "react-toastify": "^9.0.8",
