--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,9 @@
 APPLICATION_SECRET=h@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@timah@reemF@tima
 SESSION_COOKIE_NAME=sessionId
 DB_CONNECTION_STRING=mongodb+srv://sgirad:jkm830ok@cluster0.icloo.mongodb.net/mujiba?retryWrites=true&w=majority
-SERVER_URL=https://localhost:3001
-UPLOAD_URL=https://localhost:3001/uploads
+SERVER_URL=https://localhost:3000
+UPLOAD_URL=https://localhost:3000/uploads
 TWILIO_ACCOUNT_SID=ACfbc7caff58064f7265716b4b43df042c
 TWILIO_AUTH_TOKEN=5a981793a837d3f3fe5e1371f746865e
 TWILIO_NUMBER=+15077347788
-NODE_ENV=production
+NODE_ENV=
